# WebFigChecker---MikroTik-WebFig-Scanner

./: Cargo.toml  LICENSE  README.md  README_updated.md
.github/workflows/.github/workflows/: windows-build.yml
.github/workflows/.github/workflows/.github/workflows/: windows-build.yml
src/: main.rs
webfigchecker/src/: main.rs
