[package]
name = "webfigchecker"
version = "1.2.0"
edition = "2021"
authors = ["Founder: Ecbrain", "Co-Founder: p4oT09"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"] }
ipnetwork = "0.20"
regex = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
